--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,16 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "indent": [
+      1,
+      2
+    ],
+    "quotes": [
+      1,
+      "double",
+      {
+        "avoidEscape": true
+      }
+    ]
+  }
 }
