--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "next": "14.2.4",
+    "openai": "^4.52.2",
     "react": "^18",
     "react-dom": "^18"
   },
