feat: add an openAI inference service

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 INFERENCE_API_KEY="your-token-here"
+INFERENCE_API_URL="openai-compliant-inference-api"
+AWS_REGION="your-aws-region"
+FEEDBACK_TABLE_NAME="dynamo-table-name"
+AWS_ACCESS_KEY_ID="aws-access-key-id"
+AWS_SECRET_ACCESS_KEY="aws-secret-access-key"
