--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "npx jest"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.609.0",
     "@headlessui/react": "^2.0.4",
     "next": "14.2.4",
     "openai": "^4.52.2",
@@ -27,6 +28,7 @@
     "eslint-config-next": "14.2.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-extended": "^3.0.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
