--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.609.0",
     "@headlessui/react": "^2.0.4",
+    "daisyui": "^4.12.10",
     "next": "14.2.4",
     "openai-fetch": "^2.0.3",
     "react": "^18",
