--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@nextui-org/react": "^2.4.6",
     "framer-motion": "^11.3.8",
     "next": "14.2.4",
-    "openai-fetch": "^2.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -27,6 +26,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "fetch-mock": "^10.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock-extended": "^3.0.7",
