--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.4.6",
     "framer-motion": "^11.3.8",
     "next": "14.2.4",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -26,7 +27,6 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "fetch-mock": "^10.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-mock-extended": "^3.0.7",
